[package]
name = "rumwebs-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
rustls = "0.19.1"
mio = { version = "0.8.0", features = ["net", "os-poll"] }

rumwebs-tcp-thread-pool = { path = "../tcp_thread_pool", version = "0.1.0" }